--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,14 @@
                         </execution>
                     </executions>
                 </plugin>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.22.2</version>
+                    <configuration>
+                        <properties>
+                        </properties>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
