--- a/rest-adapter/pom.xml
+++ b/rest-adapter/pom.xml
@@ -12,6 +12,10 @@
     <version>1.0.0-SNAPSHOT</version>
     <name>Rest Adapter</name>
 
+    <properties>
+        <springdoc.openapi.ui>1.6.2</springdoc.openapi.ui>
+    </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -43,6 +47,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
             <version>${spring.boot.version}</version>
+        </dependency>
+        <!-- swagger -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>${springdoc.openapi.ui}</version>
         </dependency>
     </dependencies>
 
